--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,40 +1,30 @@
-.navbar {
-  background-color: #f6f6f6;
-  /* color: #413232; */
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+/* Basic CSS for the navbar */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@500&display=swap');
+nav {
+  background-image: linear-gradient(to bottom, #2e8dcc, #1c4f71);
+  color: white;
+  padding: 15px;
+  width: 100%;
   position: sticky;
-  top: 0;
-  z-index: 10;
+  top: 0%;
 }
 
-.button {
-  /* background-color: #413232; */
-  /* color: #d46666; */
-  border: none;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-.circle {
+ul {
+  list-style: none;
+  padding: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #3498db;
+  margin-left: 37%;
+  margin-top: 0.5rem;
 }
 
-.nav1 {
+li {
+  margin-right:85px;
   cursor: pointer;
-  border-color: rgb(17, 155, 186);
-  border-style: solid;
-  border-width: 3px;
-  padding: 0.8%;
-  border-radius: 5%;
+  color: white;
+  font-size: 1.4rem;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+li:hover {
+  color: #070706; /* Change the color on hover */
 }
