--- a/frontend/src/components/Signin.module.css
+++ b/frontend/src/components/Signin.module.css
@@ -1,30 +1,6 @@
-.container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 60vh;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  min-width: 80vw;
-  position: absolute;
-  border-radius: 5px;
-  overflow-x: none;
-  overflow-y: auto;
-   */
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
+.container{
+  background-color: rgb(66, 74, 81);
 }
-
 .form {
   display: flex;
   flex-direction: column;
@@ -33,18 +9,20 @@
   min-height: 30rem;
   border: 1px solid #413232;
   border-radius: 5px;
-  padding: 10px;
-  width: 70vw;
-  background-color: white;
+  padding: 20px;
+  width: 35vw;
+  background-color: rgb(157, 189, 208);
   /* padding: 1rem; */
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  border-radius: 14px;
-  position: absolute;
-  width: 22rem;
-  overflow: hidden;
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25); */
+  /* border-image: linear-gradient(to right, #3498db, #57cfda) ; */
+}
+.form h3 {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: -1.3cm;
 }
 .form input {
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 .buttons {
   display: flex;
@@ -78,6 +56,9 @@ input[type="number"]::-webkit-outer-spin-button {
   border-radius: 50%;
   scale: 300%;
   z-index: 1;
+}
+.signin{
+  cursor: pointer;
 }
 @media screen and (max-width: 1800px) {
   .container {
