--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,5 +1,5 @@
 /* Basic CSS for the navbar */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@500&display=swap");
 .navbar {
   background-image: linear-gradient(to bottom, #2470a2, #0b1f2c);
   color: white;
@@ -19,11 +19,11 @@
 }
 
 .navbar ul li {
-  margin-right:85px;
+  margin-right: 85px;
   cursor: pointer;
   color: white;
   font-size: 1.4rem;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .navbar ul li:hover {
