--- a/frontend/src/components/card.css
+++ b/frontend/src/components/card.css
@@ -18,10 +18,42 @@
     margin-bottom: 2rem;
 }
 #card-title{
-    height: 27.25rem;
+    height: fit-content;
     object-fit: cover;
     border-radius: 10px;
     width: fit-content;
     margin-right: 5rem;
     margin-left: 2rem;
+}
+@media screen and (max-width: 900px){
+    #card-detail{
+        flex-direction: column;
+        margin: 2rem 2rem 2rem 2rem;
+        height: fit-content;
+        width: auto;
+        max-width: fit-content;
+        padding-top: 2rem;
+    }
+    #card-title img{
+        margin: 0rem 2rem 0 2rem;
+        justify-content: center;
+        justify-self: center;
+        height: fit-content;
+        width: 20rem;
+    }
+    #card-list{
+        padding: 0rem 2rem 2rem 2rem;
+        justify-content: center;
+        justify-self: center;
+        align-items: center;
+        align-self: center;
+        width: 100%;
+        height: fit-content;
+    }
+    #card-list h1{
+        margin-top: 1.5rem;
+        font-size: 1.5rem;
+        margin-bottom: .5rem;
+    }
+    
 }
