--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -22,12 +22,14 @@
   -ms-flex-positive: 1;
   flex-grow: 1;
 }
+
 .footer-nav-list {
   min-width: -webkit-calc(20% - 16px);
   min-width: calc(20% - 16px);
   width: -webkit-calc(20% - 16px);
   width: calc(20% - 16px);
 }
+
 footer {
   padding-top: 50px;
   margin-top: 3%;
@@ -41,12 +43,15 @@ footer {
 .footer-nav {
   padding-bottom: 50px;
 }
+
 footer {
   background: rgb(34, 33, 33);
   padding: 30px 0;
   display: block;
 }
-.footer-category-link {
+
+.footerCategoryLink {
+  list-style: none;
   position: relative;
   color: #646060;
   font-size: 15px;
@@ -59,19 +64,21 @@ footer {
   color: #646060;
   list-style: none;
 }
+
 .footerNavLink:hover {
   text-decoration: none;
   color: rgb(250, 64, 95);
   list-style: none;
 }
 
-.footer-category-link:hover {
+.footerCategoryLink:hover {
   position: relative;
   color: #434141;
   font-size: 15px;
   text-transform: capitalize;
   padding-left: 5px;
 }
+
 .footer-nav .nav-title {
   position: relative;
   color: white;
@@ -81,16 +88,19 @@ footer {
   padding-bottom: 5px;
   text-decoration: underline pink;
 }
+
 .payment-img {
   max-width: 335px;
   width: 100%;
   margin: auto;
   margin-bottom: 15px;
 }
+
 img {
   overflow-clip-margin: content-box;
   overflow: clip;
 }
+
 .footer-category-title {
   color: rgb(250, 64, 95);
   font-size: 20px;
@@ -98,12 +108,15 @@ img {
   text-transform: uppercase;
   margin-bottom: 15px;
 }
+
 .copyright {
   color: #888686;
 }
+
 .footer-button {
   margin-left: 40%;
 }
+
 h3 {
   display: block;
   font-size: 1.17em;
@@ -113,17 +126,53 @@ h3 {
   margin-inline-end: 0px;
   font-weight: bold;
 }
+
 .category-box-title {
   color: #625a5a;
   margin-top: -2px;
 }
+
 .footer-category-box {
   display: flex;
 }
+
 address {
   color: #625a5a;
 }
 
 .footer-nav-list {
   list-style: none;
+}
+
+@media screen and (max-width: 900px) {
+  .footer-nav  {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-nav-list {
+    min-width: -webkit-calc(50% - 15px);
+    min-width: calc(50% - 15px);
+    width: -webkit-calc(50% - 15px);
+    width: calc(50% - 15px);
+  }
+
+  .footer-nav-list {
+    min-width: -webkit-calc(50% - 16px);
+    min-width: calc(50% - 16px);
+    width: -webkit-calc(50% - 16px);
+    width: calc(50% - 16px);
+  }
+
+  .footer-nav .nav-title {
+    margin-bottom: 15px;
+  }
+
+  .footer-category {
+    display: none;
+  }
 }
