#updated frontend+backend

--- a/frontend/src/components/categories/categories.css
+++ b/frontend/src/components/categories/categories.css
@@ -10,9 +10,11 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  grid-gap: 5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
   justify-items: center;
   align-items: center;
 }
