--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -8,18 +8,23 @@
   position: sticky;
   top: 0%;
   z-index: 1000;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
 }
 
 .navbar ul {
   list-style: none;
   padding: 0;
   display: flex;
-  margin-left: 35vw;
+  flex-direction: row;
+  /* margin-left: 35vw; */
   margin-top: 0.5rem;
 }
 
-.navbar ul li {
-  margin-right: 85px;
+.navbar ul li,
+.navlink {
+  margin-left: 2vw;
   cursor: pointer;
   color: white;
   font-size: 1.4rem;
@@ -27,5 +32,5 @@
 }
 
 .navbar ul li:hover {
-  color: #070706; /* Change the color on hover */
+  color: #070706;
 }
