--- a/frontend/src/components/sidebar.module.css
+++ b/frontend/src/components/sidebar.module.css
@@ -1,10 +1,10 @@
 .sidebar {
-  width: 0;
-  height: 100%;
+  width: 100%;
+  height: max-content;
   background-color: #e0dbb4;
   position: fixed;
   /* top: 0; */
-  left: 0;
+  right: 0;
   /* overflow-x: hidden; */
   transition: 0.5s;
   padding-top: 60px;
