--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 body,
 html {
@@ -23,4 +22,19 @@ html {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.responsive-iframe {
+  width: 50vw;
+  height: 0;
+  padding-bottom: 28.125%;
+  position: relative;
+}
+
+.responsive-iframe iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
