--- a/frontend/src/components/Navbar.module.css
+++ b/frontend/src/components/Navbar.module.css
@@ -1,4 +1,3 @@
-/* Basic CSS for the navbar */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@500&display=swap");
 .navbar {
   background-image: linear-gradient(to bottom, #2470a2, #0b1f2c);
@@ -10,7 +9,7 @@
   z-index: 1000;
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .navbar ul {
@@ -18,7 +17,6 @@
   padding: 0;
   display: flex;
   flex-direction: row;
-  /* margin-left: 35vw; */
   margin-top: 0.5rem;
 }
 
